# random-stuff

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci-pipeline.yml  infrastructure-health.yml  main.ci.yml  spotify.ci.yml
clients/: __init__.py
clients/ai_utils/: README.md  __init__.py  data_processor.py  pyproject.toml
clients/ai_utils/ai_utils_client/: __init__.py  data_ingestor_client.py  data_processor_client.py
clients/core_lib/: __init__.py  pyproject.toml
clients/core_lib/core_lib_client/: __init__.py  logger_client.py
clients/gdrive/: Makefile  README.md  __init__.py  pyproject.toml
clients/gdrive/gdrive_client/: __init__..py  client.py  drive.py
clients/gdrive/scripts/: gdrive_health_check.py
clients/gdrive/tests/: gdrive_test.py
clients/spotify/: Makefile  README.md  __init__.py  pyproject.toml
clients/spotify/spotify_client/: client.py  main.py  utils.py
clients/spotify/tests/: client_test.py
common/python/: logging_utils.py
docs/architecture/: layered-system.md
docs/standards/: git-conventions.md  issue-standardization.md
scripts/: global_health_check.py  health_check_data_ingestor.py  health_check_data_processor.py  health_check_gdrive.py  health_check_global.py  health_check_logger.py
spotify/: .env  Makefile  env.py  pyproject.toml
spotify/src/: client.py  main.py  utils.py
spotify/tests/: client_test.py
