[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "automation-hub"
version = "0.1.0"
description = "Centralized automation clients and AI utilities"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # --- Core & Environment ---
    "python-dotenv",
    "requests",
    # --- Google Drive API Integration ---
    "google-api-python-client",
    "google-auth-httplib2",
    "google-auth-oauthlib",
    # --- Data Science & AI (AI-Lab Support) ---
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "scipy>=1.12.0",
    "matplotlib>=3.8.0",
    "scikit-learn>=1.4.0",
    # --- Quality Gates & Security (SSoT) ---
    "bandit",
    "pip-audit",
    "ruff",
    "black",
    "isort",
    # --- Testing & Notebook Automation ---
    "pytest",
    "nbclient",
    "nbformat"
]

[tool.setuptools.packages.find]
where = ["."]
# Isto garante que o pip encontra as pastas clients e common na raiz
include = ["clients"]