[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-utils"
version = "0.1.0"
description = "AI Utilities client for data processing and feature engineering"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ai_utils_client*"]