[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gdrive-client"
version = "0.1.0"
description = "Google Drive client for Automation Hub"
dependencies = [
    "google-api-python-client",
    "google-auth-httplib2",
    "google-auth-oauthlib",
]

[tool.setuptools]
# Explicitly include only the package folder, ignoring 'data' and 'tests'
packages = ["gdrive_client"]

[tool.pytest.ini_options]
# Filter specific deprecation warnings from third-party libraries
filterwarnings = [
    "ignore::DeprecationWarning:httplib2.*:",
    "ignore::DeprecationWarning:googleapiclient.*:",
]
testpaths = ["tests"]
pythonpath = ["../../", "."]
addopts = "-vv --tb=short"