[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gdrive-client"
version = "0.1.0"
description = "Google Drive client for Automation Hub"
requires-python = ">=3.12"
dependencies = [
    "google-api-python-client",
    "google-auth-httplib2",
    "google-auth-oauthlib",
    "python-dotenv",
]

[tool.setuptools]
# Explicitly include only the package folder
packages = ["gdrive_client"]

# ─────────────────────────────────────────────────────────────
# Ruff configuration (Unified with Spotify)
# ─────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 88
target-version = "py312"
# Select rules: E (Error), F (Pyflakes), I (Isort)
select = ["E", "F", "I"]
fix = true

[tool.ruff.lint]
# E/F: Pycodestyle/Pyflakes, I: Isort logic, B: Bugbear
select = ["E", "F", "I", "B"]
ignore = ["E501"] # Formatting handles line length

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.isort]
# Specific configuration for import sorting
known-first-party = ["clients"]

# ─────────────────────────────────────────────────────────────
# Pytest configuration
# ─────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
# Filter specific deprecation warnings from Google libraries
filterwarnings = [
    "ignore::DeprecationWarning:httplib2.*:",
    "ignore::DeprecationWarning:googleapiclient.*:",
]
markers = [
    "integration: marks tests as integration (skipped in CI)"
]
testpaths = ["tests"]
# Using "." is enough since we use editable installs in the workflow
pythonpath = ["."]
addopts = "-vv --tb=short"